1. drop meta cache 2. force span.fx_area_marker to be invisible 3. fixed wysiwyg image uploader script

--- a/Admin/style/front.less
+++ b/Admin/style/front.less
@@ -452,3 +452,9 @@ img.fx_hilight {
 body:not(.fx_mode_edit) .fx_view_hidden {
     display:none;
 }
+
+span.fx_area_marker {
+    width:0 !important;
+    height:0 !important;
+    margin:0 !important;
+}
